; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/arch/gc/netif/extr_gcif.c_bba_process.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/arch/gc/netif/extr_gcif.c_bba_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pbuf = type { %struct.eth_hdr* }
%struct.eth_hdr = type { i32 }
%struct.netif = type { i64 }
%struct.bba_priv = type { i32 }

@NETIF_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"bba_process: passing packet up to IP layer\0A\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"bba_process: passing packet up to ARP layer\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bba_process(%struct.pbuf* %0, %struct.netif* %1) #0 {
  %3 = alloca %struct.pbuf*, align 8
  %4 = alloca %struct.netif*, align 8
  %5 = alloca %struct.eth_hdr*, align 8
  %6 = alloca %struct.bba_priv*, align 8
  %7 = alloca i32, align 4
  store %struct.pbuf* %0, %struct.pbuf** %3, align 8
  store %struct.netif* %1, %struct.netif** %4, align 8
  store %struct.eth_hdr* null, %struct.eth_hdr** %5, align 8
  %8 = load %struct.netif*, %struct.netif** %4, align 8
  %9 = getelementptr inbounds %struct.netif, %struct.netif* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.bba_priv*
  store %struct.bba_priv* %11, %struct.bba_priv** %6, align 8
  store i32 4, i32* %7, align 4
  %12 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %13 = icmp ne %struct.pbuf* %12, null
  br i1 %13, label %14, label %46

14:                                               ; preds = %2
  %15 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %16 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %15, i32 0, i32 0
  %17 = load %struct.eth_hdr*, %struct.eth_hdr** %16, align 8
  store %struct.eth_hdr* %17, %struct.eth_hdr** %5, align 8
  %18 = load %struct.eth_hdr*, %struct.eth_hdr** %5, align 8
  %19 = getelementptr inbounds %struct.eth_hdr, %struct.eth_hdr* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @htons(i32 %20)
  switch i32 %21, label %42 [
    i32 128, label %22
    i32 129, label %33
  ]

22:                                               ; preds = %14
  %23 = load i32, i32* @NETIF_DEBUG, align 4
  %24 = call i32 @LWIP_DEBUGF(i32 %23, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %25 = load %struct.netif*, %struct.netif** %4, align 8
  %26 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %27 = call i32 @etharp_ip_input(%struct.netif* %25, %struct.pbuf* %26)
  %28 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %29 = call i32 @pbuf_header(%struct.pbuf* %28, i32 -4)
  %30 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %31 = load %struct.netif*, %struct.netif** %4, align 8
  %32 = call i32 @ip_input(%struct.pbuf* %30, %struct.netif* %31)
  br label %45

33:                                               ; preds = %14
  %34 = load i32, i32* @NETIF_DEBUG, align 4
  %35 = call i32 @LWIP_DEBUGF(i32 %34, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0))
  %36 = load %struct.netif*, %struct.netif** %4, align 8
  %37 = load %struct.bba_priv*, %struct.bba_priv** %6, align 8
  %38 = getelementptr inbounds %struct.bba_priv, %struct.bba_priv* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %41 = call i32 @etharp_arp_input(%struct.netif* %36, i32 %39, %struct.pbuf* %40)
  br label %45

42:                                               ; preds = %14
  %43 = load %struct.pbuf*, %struct.pbuf** %3, align 8
  %44 = call i32 @pbuf_free(%struct.pbuf* %43)
  br label %45

45:                                               ; preds = %42, %33, %22
  br label %46

46:                                               ; preds = %45, %2
  ret void
}

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1

declare dso_local i32 @etharp_ip_input(%struct.netif*, %struct.pbuf*) #1

declare dso_local i32 @pbuf_header(%struct.pbuf*, i32) #1

declare dso_local i32 @ip_input(%struct.pbuf*, %struct.netif*) #1

declare dso_local i32 @etharp_arp_input(%struct.netif*, i32, %struct.pbuf*) #1

declare dso_local i32 @pbuf_free(%struct.pbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
